--- a/CSS/queries.css
+++ b/CSS/queries.css
@@ -171,6 +171,10 @@
   .card-menu {
     grid-column: 1 / 3;
   }
+  .family::after {
+    top: 8%;
+    right: -15%;
+  }
 
   .grid-5-col {
     grid-template-columns: repeat(6, 1fr);
@@ -249,8 +253,8 @@
     grid-template-columns: repeat(4, 1fr);
   }
   .family::after {
-    top: 10%;
-    right: -18%;
+    top: 8%;
+    right: -21%;
     padding: 0.8rem 14rem;
   }
   .grid-2-1-col {
@@ -268,7 +272,7 @@
 /**************************/
 /* BELOW 375px (Smaller-Phones) */
 /**************************/
-@media (max-width: 22em) {
+@media (max-width: 25em) {
   .container {
     padding: 3rem 2.5rem;
   }
@@ -283,7 +287,7 @@
     width: 65%;
   }
   .family::after {
-    top: 7%;
-    right: -35%;
+    top: 9%;
+    right: -28%;
   }
 }
